--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,12 @@ title: CS 61B - Section 15
 baseurl: /cs61b
 email: tammynguyen@berkeley.edu
 
-
-
 highlighter: rouge
 markdown: kramdown
 ### exclude the instructions / write-up in the README.md
 
-
-# Tracker
-analytics: UA-83979019-1
-
 # Comments
 disqus-shortname: webjeda-demo
-
 
 #optimization
 #compress.html
@@ -27,7 +20,6 @@ compress_html:
   blanklines: false
   profile: false
   startings: []
-  
 
 sass:
  style: compressed
@@ -35,5 +27,4 @@ sass:
 exclude:
 - README.md
 
-
-gems: [jekyll-seo-tag, jekyll-paginate]
+plugins: [jekyll-seo-tag, jekyll-paginate]
